--- a/H1.md
+++ b/H1.md
@@ -19,7 +19,7 @@ Feladat címe: Első beadandó </h3>
 |:--------------:|:---------------:|:------------------------------------:|
 | Szabó Martin   | JDVK0Y          | szabo.martin@student.uni-miskolc.hu    |
 | Balázs Tamás   | HM23GB          | balazs.tamas@student.uni-miskolc.hu    |
-| Ádám Robi      | G3LZYU          | adam.robert@student.uni-miskolc.hu     |
+| Ádám Róbert    | G3LZYU          | adam.robert@student.uni-miskolc.hu     |
 | Bordás Dávid   | D2NGJO          | devidbordas@gmail.com   |
 
 
