--- a/H2.md
+++ b/H2.md
@@ -21,3 +21,65 @@ Feladat címe: Első beadandó </h3>
 <p>&nbsp;</p>
 
 <p align="right">2021.10.11</p>
+
+Az alkalmazás helye:
+====================
+A játékunk célja elsősorban a szórakoztatás, valamint elődje az ismert online „AZ” nevű játék továbbfejlesztése. A mi játékunk egy ingyenesen letölthető, regisztrációhoz kötött alkalmazás mely kibővült funkciókat tartalmaz az online változatához képpest. A local multiplayer megmarad, két fő tud majd játszani egy billentyűzeten egymás ellen. Ami érdekesebb, hogy a mi játékunkban lesz online multiplayer is ahol a játékosok akár a barátaik vagy akár random játékosok ellen tudnak játszani. Az online rendszer úgy működne, hogy minden játékos a 10. osztályból indulna(division) a játéktudástól függően lehetne feljebb kerülni egészen az első osztályig. Minél magasabb osztályban vagy annál jobb jutalmakat kapsz. Lesz egy bizonyos játékbeli pénz melynek neve Tcoin lesz. Ilyet gyűjthetnek a játékosok különböző objectivek teljesítésével és a heti teljesítményüket is jutalmazni fogjuk Tcoinnal valamint loot boxokkal.
+
+Üzleti lehetőségek:
+===================
+Egy előfizetéses rendszerre gondoltunk, mellyel prémium tagságot lehetne kiváltani, ez különböző előnyökhöz juttatná az előfizetett tagokat. Ilyenek például: erősebb tankok rögtön a játék elején, kétlépcsős bejelentkezés lehetősége, skin pack a játék elején. Valamint mikrotranzakciók is kerülnének a játékba ezekkel további egyedi skineket és különleges tankokat lehetne vásárolni. De akár különböző loot boxok is elérhetőek lennének. Ezek random dobnának egy itemet a játékosnak annak a függvényében, hogy milyen loot boxot nyitott ki az adott játékos. 
+
+A probléma megfogalmazása: 
+==========================
+Olyan problémák fordulhatnak elő, hogy a tank lövedéke bele- vagy átmegy a falon. Leállhat a játék ha az egyik tank felrobban. Ezek rombolhatják a felhasználók játékélményét.
+
+Az elkészült termék helye:
+==========================
+Mivel ez egy free-to-play játék ezért minden olyan felhasználónak készül aki számára érdekes és ki szeretné próbálni. Ha megkéne nevezni akkor a fiatalabb korosztály a célközönség hisz több idejük van, többet játszanak mint az idősebb korosztály képviselői. Akár lokálisan is tudnak egymás ellen játszani billentyűzeten keresztül 2-en. A játék alternatívája a fentebb említett „AZ” nevű online játék. Itt egy random pályára dob be a játék. A mi játékunkban viszont választható a pályaméret. Mivel asztali alkalmazás ezért biztonságosabb is lesz. Több fajta tank megtalálható lesz a játékban skinekkel (A skineket úgy képzeljük el, hogy lesznek egy színűek, országok zászlóit felidézőek, valamint egyéb különleges színűek gondolunk itt lehetne több színű, csíkos, színátmenetes.) és különböző képeségekkel. Lesz olyan ami gyorsabban tud majd mozogni vagy gyorsabban tud lőni. Különböző képességeket lehet majd felvenni a pályán ami különböző előnyhöz juttatja a játékosokat: 
+* nyomkövető rakéta 
+* pajzs 
+* három golyó kilövése egyszerre 
+* egy olyan képesség mely lehetővé teszi, hogy a játékosnak ne kelljen várnia két golyó kilövése között, ez 5 golyó kilövéséig érvényes
+* egy olyan golyó melyet ha kilőnek és ütközik egy fallal vagy egy tankkal akkor sok kisebb golyóra osztódik. 
+
+Ami nagy különbség még az online elődhöz képest az az online multiplayer lehetőség amit fentebb már ki lett vesézve. 
+
+<h3>A termék használatának előnyei:</h3>
+<p Elsősorban az „AZ” tankos játékkal összehasonlítva a könnyebb, dinamikusabb mozgás. </br>
+A mozgás és fordulás egy időben való történése sokkal élethűbb élményt ad a játékosoknak. </br>
+A grafikára nagyobb hangsúlyfektetéssel, kifinomultabb, több élménydús és igazi játékélvezetet biztosítunk. </br>
+Több játékos használhatja egy időben, egyszerre, egymással vagy akár egymás ellen, lokálisan.</br></p>
+
+<p>&nbsp;</p>
+
+<h3>Feltételezések és függőségek:</h3>
+<p A spawn hely, ahol a tankok kezdő pozíciója van, sosem ütközik a pálya falával, vagy nem azonos a másik játékos spawn koordinátáival. </br>
+Az pályához tartozó objektumok áttörhetetlensége és áthatolhatatlansága. </br>
+Ha mozog az egyik játékos, tud mozogni a másik is, vagyis több billentyűgomb lenyomását érzékelni fogja. </br>
+Az előre, hátra haladás közben fordulás lehetősége. </br>
+A játékmenüben látható „fülek” aktívak, elérhetőek, megnyomhatóak és reagálnak. </br>
+A játékos névválasztás nem lehet azonos és a tankok színei sem. Ha felvesz egy fegyvert, akkor azzal fog lőni a tank.</br></p>
+
+Regisztráció:
+
+A játék használatához regisztráció szükséges. Ehhez egy alapvető ábra jól szemlélteni, hogy mit mért és hogyan kell megvalósítani.
+
+- Elsősorban meg kell oldani a regisztrációhoz szükséges ablakot. Az ablakhoz nincsenek megkötött méméretek megadva.
+
+   Ide szükséges kitételek:
+
+     1, A regisztráció és a bejelentkezés fül az oldalon belül 2 külön topicot foglaljon el.
+
+     2, A regisztrációs fülre kattintva új ablak jelenjen meg.
+
+     3, A regisztrációhoz szükséges adatok (felhasználónév, jelszó, jelszó megerősítése, email-cím) megadása kötelező az életkor megadása pedig opcionális.
+ 
+- Másodsorban meg kell oldani a felhasználók beléptetéséhez(login) és kijelentkezéséhez(log out) szükséges ablakok létrehozását.
+- Kétlépcsős bejelentkezés az előfizetett játékosok számára. (prérium fiók plusz feature-je)
+- Bejelentkezést követően töltöképernyő betöltése és ezt követően a játék. A töltőképernyőre szukséges a játék logója, illetve egy betöltési szintet jelző csík illetve annak %-át jelző számláló. Ezen alrész eddig a folyamatig írja le a teendőket.
+
+Regisztráció: ![Shape1](RackMultipart20211017-4-3bh9oh_html_29add9ba5316730e.gif)
+
+Betöltés folyamata: ![Shape2](RackMultipart20211017-4-3bh9oh_html_c58aa10329a90b65.gif)
+
