--- a/H2.md
+++ b/H2.md
@@ -45,7 +45,8 @@ Mivel ez egy free-to-play játék ezért minden olyan felhasználónak készül 
 
 Ami nagy különbség még az online elődhöz képest az az online multiplayer lehetőség amit fentebb már ki lett vesézve. 
 
-<h3>A termék használatának előnyei:</h3>
+A termék használatának előnyei:
+===============================
 <p Elsősorban az „AZ” tankos játékkal összehasonlítva a könnyebb, dinamikusabb mozgás. </br>
 A mozgás és fordulás egy időben való történése sokkal élethűbb élményt ad a játékosoknak. </br>
 A grafikára nagyobb hangsúlyfektetéssel, kifinomultabb, több élménydús és igazi játékélvezetet biztosítunk. </br>
@@ -53,7 +54,8 @@ Több játékos használhatja egy időben, egyszerre, egymással vagy akár egym
 
 <p>&nbsp;</p>
 
-<h3>Feltételezések és függőségek:</h3>
+Feltételezések és függőségek:
+=============================
 <p A spawn hely, ahol a tankok kezdő pozíciója van, sosem ütközik a pálya falával, vagy nem azonos a másik játékos spawn koordinátáival. </br>
 Az pályához tartozó objektumok áttörhetetlensége és áthatolhatatlansága. </br>
 Ha mozog az egyik játékos, tud mozogni a másik is, vagyis több billentyűgomb lenyomását érzékelni fogja. </br>
@@ -62,6 +64,7 @@ A játékmenüben látható „fülek” aktívak, elérhetőek, megnyomhatóak 
 A játékos névválasztás nem lehet azonos és a tankok színei sem. Ha felvesz egy fegyvert, akkor azzal fog lőni a tank.</br></p>
 
 Regisztráció:
+=============
 
 A játék használatához regisztráció szükséges. Ehhez egy alapvető ábra jól szemlélteni, hogy mit mért és hogyan kell megvalósítani.
 
