--- a/H2.md
+++ b/H2.md
@@ -4,8 +4,15 @@ Feladat címe: Első beadandó </h3>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
 <h1 align="center">Első beadandó</font></h1>
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
 <p align="center">Gyakorlatvezető:</p>
 <h2 align="center">Krizsán Zoltán</font></h2>
@@ -19,6 +26,10 @@ Feladat címe: Első beadandó </h3>
 
 
 <p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+
 
 <p align="right">2021.10.11</p>
 
