--- a/H2.md
+++ b/H2.md
@@ -96,5 +96,5 @@ A játék használatához regisztráció szükséges. Ehhez egy alapvető ábra 
 Regisztráció: ![Shape1](RackMultipart20211017-4-3bh9oh_html_29add9ba5316730e.gif)
 
 Betöltés folyamata: 
-<img src="Images/betoltes.png" >
+<img src="Images/betoltes_folyamatabra.png" 500>
 
