kész összevágás képekkel

--- a/H2.md
+++ b/H2.md
@@ -93,9 +93,14 @@ A játék használatához regisztráció szükséges. Ehhez egy alapvető ábra 
 - Kétlépcsős bejelentkezés az előfizetett játékosok számára. (prérium fiók plusz feature-je)
 - Bejelentkezést követően töltöképernyő betöltése és ezt követően a játék. A töltőképernyőre szukséges a játék logója, illetve egy betöltési szintet jelző csík illetve annak %-át jelző számláló. Ezen alrész eddig a folyamatig írja le a teendőket.
 
-Regisztráció: ![Shape1](RackMultipart20211017-4-3bh9oh_html_29add9ba5316730e.gif)
+Regisztráció folyamata:
+----------
+
+<img src="Images/regisztracio_folyamatabra.png" width="1000">
+
 
 Betöltés folyamata: 
+-------------
 
 <img src="Images/betoltes_folyamatabra.png" width="1000">
 
