--- a/H3_(1)(2)(3).md
+++ b/H3_(1)(2)(3).md
@@ -37,11 +37,58 @@ Feladat címe: Első beadandó </h3>
 =========
 Ebben a dokumentumban a csapatunk által fejlesztés alatt álló applikáció részletes specifikációját közöljük. Az alábbiakban határozzuk meg a rendszer által nyújtott szolgáltatásokat, kitérünk a megbízhatóságra és a teljesítményre vonatkozó követelményekre is. Megtalálható még a dokumentumban a hardver és szoftver interfészek jellemzői, és a fejlesztés során alkalmazott szabványok is. Továbbá a dokumentációhoz tartozik egy szótár is.
 
+<p>&nbsp;</p>
+
 2, Áttekintés
 ====================
 A játékunk célja elsősorban a szórakoztatás, valamint elődje az ismert online „AZ” nevű játék továbbfejlesztése. A mi játékunk egy ingyenesen letölthető, regisztrációhoz kötött alkalmazás mely kibővült funkciókat tartalmaz az online változatához képpest. A local multiplayer megmarad, két fő tud majd játszani egy billentyűzeten egymás ellen. Ami érdekesebb, hogy a mi játékunkban lesz online multiplayer is ahol a játékosok akár a barátaik vagy akár random játékosok ellen tudnak játszani. Az online rendszer úgy működne, hogy minden játékos a 10. osztályból indulna(division) a játéktudástól függően lehetne feljebb kerülni egészen az első osztályig. Minél magasabb osztályban vagy annál jobb jutalmakat kapsz. Lesz egy bizonyos játékbeli pénz melynek neve Tcoin lesz. Ilyet gyűjthetnek a játékosok különböző objectivek teljesítésével és a heti teljesítményüket is jutalmazni fogjuk Tcoinnal valamint loot boxokkal.
 
+<p>&nbsp;</p>
+
 3, A program funkciói
 =====================
-A következő alpont első részében a Tankies-hez kapcsolódó személyek által igénybe vehető funkciókat tárgyaljuk, a use-case ábra segít a felhasználó által elérhető opciók értelmezésében.
+A következő alpont első részében a Tankies-hez kapcsolódó személyek által igénybe vehető funkciókat tárgyaljuk, a use-case ábra segít a felhasználó által elérhető opciók 
+értelmezésében.
+
+<p>&nbsp;</p>
+
 <img src="Images/usecase_diagram.png" width="1000">
+
+<p>&nbsp;</p>
+
+A Felhasználó ebben a diagramban az a személy, aki a játékot kezeli. A use-case diagram bemutatja a felhasználó lehetőségeit. a játék főmenüjébe érve az indítási folyamat elvégzése után.
+A menüben egyszerű haladás érdekében egérrel bal klikk megnyomásával és billentyűzet nyilak és enter valamint escape billentyűket használva navigálhat, valamint minden menü bal felső sarkában egy vissza nyil található az egér használok menüben visszalépés érdekében.
+
+<p>&nbsp;</p>
+
+A Felhasználó a főmenübe érve három opcióval találkozik:
+
+* PLAY
+  * A PLAY gomb a játék indításához közelíti a felhasználót. Nem indítja azonnal a játékot, hiszen több opció közül kell választani a több játékmód miatt. 
+
+* SETTINGS
+  * A SETTINGS gomb a felhasználót egyenesen a beállítások menübe vezeti ahol a felhasználó különböző megszabott változtatásokat végezhet a játékon a játékélmény személyre szabása és javítása érdekében.
+
+* EXIT GAME
+  * Az EXIT GAME gomb leállítja a játék folyamatát a lehető legoptimálisabb módon, felszabadítva a játék által használt erőforrásokat.
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+Play opció választásával további két lehetőség jelenik meg a felhasználó kijelzőjén:
+
+* ONLINE
+  * Az ONLINE mód választásával internet kapcsolat elérése esetén a felhasználónak lehetősége van más játékosokkal játszani világ szerte.
+* OFFLINE
+  * Az OFFLINE mód választása esetén internet kapcsolat elérése nélkül is lehetősége nyílik játszani a felhasználónak.
+
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+
+ONLINE mód választása esetén további két lehetőség nyílik a felhasznáó számára_
+* CASUAL
+  * 
+* RANKED
+  * 
+
+
