--- a/H3.md
+++ b/H3.md
@@ -44,3 +44,11 @@ Ebben a dokumentumban a csapatunk által fejlesztés alatt álló applikáció r
 A játékunk célja elsősorban a szórakoztatás, valamint elődje az ismert online „AZ” nevű játék továbbfejlesztése. A mi játékunk egy ingyenesen letölthető, regisztrációhoz kötött alkalmazás mely kibővült funkciókat tartalmaz az online változatához képpest. A local multiplayer megmarad, két fő tud majd játszani egy billentyűzeten egymás ellen. Ami érdekesebb, hogy a mi játékunkban lesz online multiplayer is ahol a játékosok akár a barátaik vagy akár random játékosok ellen tudnak játszani. Az online rendszer úgy működne, hogy minden játékos a 10. osztályból indulna(division) a játéktudástól függően lehetne feljebb kerülni egészen az első osztályig. Minél magasabb osztályban vagy annál jobb jutalmakat kapsz. Lesz egy bizonyos játékbeli pénz melynek neve Tcoin lesz. Ilyet gyűjthetnek a játékosok különböző objectivek teljesítésével és a heti teljesítményüket is jutalmazni fogjuk Tcoinnal valamint loot boxokkal.
 
 <p>&nbsp;</p>
+
+3, Use-Case diagramok
+======================
+Ebben a bizonyos pontban összefoglaljuk a programunk fő Use-Case-eit. Ezeknek kifejezetten nagy fontossága van mninden programban, beleértve a miénket is. Ezért kifejezetten sok részletre bontottuk az egyszerű átláthatóság elérése érdekében.
+
+
+
+<img src="Images/BejelentkezesUseCase.png" width="1000">
