--- a/H3.md
+++ b/H3.md
@@ -52,3 +52,16 @@ Ebben a bizonyos pontban összefoglaljuk a programunk fő Use-Case-eit. Ezeknek 
 
 
 <img src="Images/BejelentkezesUseCase.png" width="1000">
+
+<img src="Images/BejFelhUseCase.png" width="1000">
+
+<img src="Images/1v1JatekUseCase.png" width="1000">
+
+<img src="Images/1vAIJatekUseCase.png" width="1000">
+
+<img src="Images/2v2JatekUseCase.png" width="1000">
+
+<img src="Images/2vAIJatekUseCase.png" width="1000">
+
+
+
