--- a/H3.md
+++ b/H3.md
@@ -43,6 +43,38 @@ Ebben a dokumentumban a csapatunk által fejlesztés alatt álló applikáció r
 ====================
 A játékunk célja elsősorban a szórakoztatás, valamint elődje az ismert online „AZ” nevű játék továbbfejlesztése. A mi játékunk egy ingyenesen letölthető, regisztrációhoz kötött alkalmazás mely kibővült funkciókat tartalmaz az online változatához képpest. A local multiplayer megmarad, két fő tud majd játszani egy billentyűzeten egymás ellen. Ami érdekesebb, hogy a mi játékunkban lesz online multiplayer is ahol a játékosok akár a barátaik vagy akár random játékosok ellen tudnak játszani. Az online rendszer úgy működne, hogy minden játékos a 10. osztályból indulna(division) a játéktudástól függően lehetne feljebb kerülni egészen az első osztályig. Minél magasabb osztályban vagy annál jobb jutalmakat kapsz. Lesz egy bizonyos játékbeli pénz melynek neve Tcoin lesz. Ilyet gyűjthetnek a játékosok különböző objectivek teljesítésével és a heti teljesítményüket is jutalmazni fogjuk Tcoinnal valamint loot boxokkal.
 
+Az alkalmazás legfontosabb funkciói:
+<ul>
+  <li>a regisztrált felhasználók nyilvántartása<li>
+  <li>a rangsor felállítása és nyilvántartása a felhasználók között<li>
+  <li>a felhasználói jogosultságok ellenőrzése<li>
+</ul>
+  
+Korlátozások:
+<ul>
+  <li>a játék elsősorban csak Windows asztali számítógépen lesz elérhető<li>
+  <li>regisztráció nélkül csak alapkiegészítőkkel élvezhetik a játékmenetet, a játék többi része nem használható (ransorba bekerülés, skinek, Tcoin)<li>
+  <li>a regisztrációhoz és az alkalmazás letöltéséhez internet kapcsolat szükséges<li>
+  <li>a regisztráció során választott jelszónak erősnek kell lennie (min. 8 karaktert, kis- és nagybetűt, valamint számot kell tartalmaznia)<li>
+</ul>
+  
+Feltételezések és függőségek:
+<ul>
+  <li>feltételezzük, hogy a felhasználó a játék használatához szükséges alapvető készségekkel rendelkezik<li>
+  <li>valószínűsítjük, hogy a felhasználók és az érdeklődők rendelkeznek a program használatához szükséges eszközökkel (pl. PC, keyboard)<li>
+  <li>a user-nek kell legalább a letöltéshez és a regisztrációhoz gondoskodnia internethozzáférésről<li>
+</ul>
+  
+A követelmények csoportosításának szempontjai:
+<ul>
+  <li>termék letöltése<li>
+  <li>regisztráció<li>
+  <li>single player mód használata<li>
+  <li>multiplayer mód használata<li>
+  <li>jogszabályi követelmények<li>
+</ul>
+
+
 <p>&nbsp;</p>
 
 3, Use-Case diagramok
