--- a/H3.md
+++ b/H3.md
@@ -45,33 +45,33 @@ A játékunk célja elsősorban a szórakoztatás, valamint elődje az ismert on
 
 Az alkalmazás legfontosabb funkciói:
 <ul>
-  <li>a regisztrált felhasználók nyilvántartása<li>
-  <li>a rangsor felállítása és nyilvántartása a felhasználók között<li>
-  <li>a felhasználói jogosultságok ellenőrzése<li>
+  <li>a regisztrált felhasználók nyilvántartása
+  <li>a rangsor felállítása és nyilvántartása a felhasználók között
+  <li>a felhasználói jogosultságok ellenőrzése
 </ul>
   
 Korlátozások:
 <ul>
-  <li>a játék elsősorban csak Windows asztali számítógépen lesz elérhető<li>
-  <li>regisztráció nélkül csak alapkiegészítőkkel élvezhetik a játékmenetet, a játék többi része nem használható (ransorba bekerülés, skinek, Tcoin)<li>
-  <li>a regisztrációhoz és az alkalmazás letöltéséhez internet kapcsolat szükséges<li>
-  <li>a regisztráció során választott jelszónak erősnek kell lennie (min. 8 karaktert, kis- és nagybetűt, valamint számot kell tartalmaznia)<li>
+  <li>a játék elsősorban csak Windows asztali számítógépen lesz elérhető
+  <li>regisztráció nélkül csak alapkiegészítőkkel élvezhetik a játékmenetet, a játék többi része nem használható (ransorba bekerülés, skinek, Tcoin)
+  <li>a regisztrációhoz és az alkalmazás letöltéséhez internet kapcsolat szükséges
+  <li>a regisztráció során választott jelszónak erősnek kell lennie (min. 8 karaktert, kis- és nagybetűt, valamint számot kell tartalmaznia)
 </ul>
   
 Feltételezések és függőségek:
 <ul>
-  <li>feltételezzük, hogy a felhasználó a játék használatához szükséges alapvető készségekkel rendelkezik<li>
-  <li>valószínűsítjük, hogy a felhasználók és az érdeklődők rendelkeznek a program használatához szükséges eszközökkel (pl. PC, keyboard)<li>
-  <li>a user-nek kell legalább a letöltéshez és a regisztrációhoz gondoskodnia internethozzáférésről<li>
+  <li>feltételezzük, hogy a felhasználó a játék használatához szükséges alapvető készségekkel rendelkezik
+  <li>valószínűsítjük, hogy a felhasználók és az érdeklődők rendelkeznek a program használatához szükséges eszközökkel (pl. PC, keyboard)
+  <li>a user-nek kell legalább a letöltéshez és a regisztrációhoz gondoskodnia internethozzáférésről
 </ul>
   
 A követelmények csoportosításának szempontjai:
 <ul>
-  <li>termék letöltése<li>
-  <li>regisztráció<li>
-  <li>single player mód használata<li>
-  <li>multiplayer mód használata<li>
-  <li>jogszabályi követelmények<li>
+  <li>termék letöltése
+  <li>regisztráció
+  <li>single player mód használata
+  <li>multiplayer mód használata
+  <li>jogszabályi követelmények
 </ul>
 
 
