--- a/H4.md
+++ b/H4.md
@@ -49,21 +49,23 @@ A következőkben tárgyaljuk a létrehozni kívánt alrendszer komponensek kapc
 
 2.1, Osztályok felsorolása
 =========
-FőAblak: Ez az osztály felelős az alkalmazás fő ablakának megjelenítéséért. Ebben jelenik meg a többi ablak.
-JátékMódAblak: Ez az osztály a játékmód kiválasztásában vesz részt, hogy 1 player, vagy több playeres játék induljon el vagy online vagy Al ellen.
-TutorialAblak: Ebben az osztályban érhető el a játék tutorialja.
-BejelentkezésAblak: Ez az osztály tartalmazza a bejelentkezős űrlapot, amellyel be tudunk jelentkezni a felhasználói fiókunkba.
-SupportAblak: Ez az osztály a support opciónkat jeleníti meg.
-Rangsor: Ebben az osztályban az adatbázisból lekérdezhetünk bizonyos dolgokat, például egy játékos pontszáma, stb.
-RegisztrációsAblak: Ez az osztály tartalmazza a regisztrációs űrlapot, amellyel létre tudunk hozni egy új felhasználói fiókot.
-JátékAblak: A játék megjelenítéséért felelős osztály.
-Játék: Ez az osztály a játékunk motorja, ez működteti a játékot és bizonyos funkciókat.
-PályákAblak: Ez az osztály felelős a pályák létrehozásáért.
-FelhasználófiókAblak: A felhasználófiókhoz tartozó adatok módosításáért felelős osztály.
-FejlettSupportAblak: Ennek az osztálynak a feladata a kapcsolat létesítése/tartása a felhasználó és az adminisztrátorok között.
-IdőSzámláló: Ez az osztály az idő számlálására lett létrehozva, amelynek a játék során jelentősége van.
-CustomizationAblak: A játékos által használt karakter kinézetének módosításáért és a pályák stílusának megváltoztatásáért felelős osztály,
-Tank: Ez az osztály a figura mozgásáért felelős.
-Mező: Ez az osztály a pályán lévő mezők osztálya.
-
+<ul>
+  <li>FőAblak: Ez az osztály felelős az alkalmazás fő ablakának megjelenítéséért. Ebben jelenik meg a többi ablak.
+  <li>JátékMódAblak: Ez az osztály a játékmód kiválasztásában vesz részt, hogy 1 player, vagy több playeres játék induljon el vagy online vagy Al ellen.
+  <li>TutorialAblak: Ebben az osztályban érhető el a játék tutorialja.
+  <li>BejelentkezésAblak: Ez az osztály tartalmazza a bejelentkezős űrlapot, amellyel be tudunk jelentkezni a felhasználói fiókunkba.
+  <li>SupportAblak: Ez az osztály a support opciónkat jeleníti meg.
+  <li>Rangsor: Ebben az osztályban az adatbázisból lekérdezhetünk bizonyos dolgokat, például egy játékos pontszáma, stb.
+  <li>RegisztrációsAblak: Ez az osztály tartalmazza a regisztrációs űrlapot, amellyel létre tudunk hozni egy új felhasználói fiókot.
+  <li>JátékAblak: A játék megjelenítéséért felelős osztály.
+  <li>Játék: Ez az osztály a játékunk motorja, ez működteti a játékot és bizonyos funkciókat.
+  <li>PályákAblak: Ez az osztály felelős a pályák létrehozásáért.
+  <li>FelhasználófiókAblak: A felhasználófiókhoz tartozó adatok módosításáért felelős osztály.
+  <li>FejlettSupportAblak: Ennek az osztálynak a feladata a kapcsolat létesítése/tartása a felhasználó és az adminisztrátorok között.
+  <li>IdőSzámláló: Ez az osztály az idő számlálására lett létrehozva, amelynek a játék során jelentősége van.
+  <li>CustomizationAblak: A játékos által használt karakter kinézetének módosításáért és a pályák stílusának megváltoztatásáért felelős osztály,
+  <li>Tank: Ez az osztály a figura mozgásáért felelős.
+  <li>Mező: Ez az osztály a pályán lévő mezők osztálya.
+</ul>
+    
 <p>&nbsp;</p>
