H3 nagy bővítése (use-case descriptions)

--- a/H3.md
+++ b/H3.md
@@ -1,13 +1,13 @@
 <h3>Csoport neve: SoftTech Games </br>
-Feladat sorszáma: H1 </br>
-Feladat címe: Első beadandó </h3>
+Feladat sorszáma: H2 </br>
+Feladat címe: Harmadik beadandó </h3>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 
-<h1 align="center">Első beadandó</font></h1>
+<h1 align="center">Harmadik beadandó</font></h1>
 
 <p>&nbsp;</p>
 <p>&nbsp;</p>
@@ -31,7 +31,7 @@ Feladat címe: Első beadandó </h3>
 
 
 
-<p align="right">2021.10.11</p>
+<p align="right">2021.11.23</p>
 
 1, Bevezetés
 =========
@@ -83,9 +83,100 @@ Ebben a bizonyos pontban összefoglaljuk a programunk fő Use-Case-eit. Ezeknek 
 
 
 
+
+
+Bejelentkezés Use-Case diagram
+==============================
+
 <img src="Images/BejelentkezesUseCase.png" width="1000">
 
+Felhasználó (Actor)
+-------------------
+Olyan személy, aki jogosult navigálni a játékon belül, valamint abba be és ki lépni.
+
+
+Felhasználó azonosítása (Use-Case)
+----------------------------------
+A felhasználó azonosítása bejelentkezés segítségével.
+
+* Prekondíciók: Be nem jelentkezett Felhasználó
+* Postkondíciók: Bejelentkezés miatt több funkció válik elérhetővé.
+* Szokásos működés (Main Flow): Bejelentkezés fiókba.
+* Alternatív esetek (Alternate Flows): Név, vagy a hozzá kötött jelszó nem található vagy nem megfelelő.
+* Kivételes esetek: Internet/szerver probléma.
+
+Jelszó megadása (Use-Case)
+--------------------------
+A felhasználó azonosításához szükséges jelszó megadása
+
+* Prekondíciók: Létező azonosító megadva
+* Postkondíciók: Bejelentkezés a fiókba.
+* Szokásos működés (Main Flow): Bejelentkezés a fiókba helyes jelszó megadásával.
+* Alternatív esetek (Alternate Flows): Helytelen jelszó sikertelen bejelentkezés.
+* Kivételes esetek: Internet/szerver probléma.
+
+Elfelejtett jelzó kezelése (Use-Case)
+-------------------------------------
+Esetleges opció, arra az esetre ha a felhaszáló elfelejtette a fiókjának a jelszavát.
+
+* Prekondíciók: A jelszó helytelen megadása.
+* Postkondíciók: Új jelszó kérési foylamat elindult.
+* Szokásos működés (Main Flow): Új jelszó kérési folyamat indítása.
+* Alternatív esetek (Alternate Flows): 
+* Kivételes esetek: Internet/szerver probléma.
+
+Bejelentkezett Felhasználó Use-Case diagram
+==============================================
 <img src="Images/BejFelhUseCase.png" width="1000">
+
+Be nem jelentkezett Felhasználó (Actor)
+----------------------------------------
+Olyan Felhasználó, aki még nincs azonosítva, tehát kevesebb jogosultága van a többi Felhasználóhoz képest.
+
+Bejelentkezett Felhasználó (Actor)
+---------------------------------------
+Olyan Felhasználó, aki már túl van az azonosítás folyamatán és sikeresen bejelentkezett Fiókjába.
+
+Bejelentkezés (Use-Case)
+------------------------
+Az a folyamat ami által a felhasználót azonosítani lehet.
+
+* Prekondíciók: Be nem elentkezett Felhasználó.
+* Postkondíciók: Felhasználó bejelentkezett.
+* Szokásos működés (Main Flow): Bejelentkezés fiókba.
+* Alternatív esetek (Alternate Flows): Sikertelen bejelentkezés.
+* Kivételes esetek: Internet/szerver probléma.
+
+Játék Random ellenfél ellen (Use-Case)
+-------------------------
+Játék indítása véletlenszerűen választott ellenfél ellen.
+
+* Prekondíciók: -
+* Postkondíciók: Játék elindult.
+* Szokásos működés (Main Flow): A játék indul az ellenfél ellen.
+* Alternatív esetek (Alternate Flows): Várakozás ellenfélre
+* Kivételes esetek: Internet/szerver probléma.
+
+Ranglisták megtekintése (Use-Case)
+-----------------
+A Ranked módok által létrejött ranglisták megtekintése
+
+* Prekondíciók: Kapcsolat internethez.
+* Postkondíciók: Ranglisták megjelentek.
+* Szokásos működés (Main Flow): Megnyitja a ranglistát.
+* Alternatív esetek (Alternate Flows): -
+* Kivételes esetek: Internet/szerver probléma.
+
+Kijelentkezés (Use-Case)
+------------
+Lehetőség arra, hogy a fehasználó kijelentkezzen fiókjából.
+
+* Prekondíciók: Bejelentkezett Felhasználó.
+* Postkondíciók: Kijelentkezett Felhasználó
+* Szokásos működés (Main Flow): Felhasználó kijelentkeztetése.
+* Alternatív esetek (Alternate Flows): -
+* Kivételes esetek: -
+
 
 <img src="Images/1v1JatekUseCase.png" width="1000">
 
@@ -94,6 +185,12 @@ Ebben a bizonyos pontban összefoglaljuk a programunk fő Use-Case-eit. Ezeknek 
 <img src="Images/2v2JatekUseCase.png" width="1000">
 
 <img src="Images/2vAIJatekUseCase.png" width="1000">
+
+* Prekondíciók: -
+* Postkondíciók: -
+* Szokásos működés (Main Flow): -
+* Alternatív esetek (Alternate Flows): -
+* Kivételes esetek: Internet/szerver probléma.
 
 
 
