Use-Case-eim bővítése

--- a/H3.md
+++ b/H3.md
@@ -1,5 +1,5 @@
 <h3>Csoport neve: SoftTech Games </br>
-Feladat sorszáma: H2 </br>
+Feladat sorszáma: H3 </br>
 Feladat címe: Harmadik beadandó </h3>
 
 <p>&nbsp;</p>
@@ -125,6 +125,9 @@ Esetleges opció, arra az esetre ha a felhaszáló elfelejtette a fiókjának a 
 * Alternatív esetek (Alternate Flows): 
 * Kivételes esetek: Internet/szerver probléma.
 
+
+<p>&nbsp;</p>
+
 Bejelentkezett Felhasználó Use-Case diagram
 ==============================================
 <img src="Images/BejFelhUseCase.png" width="1000">
@@ -177,14 +180,189 @@ Lehetőség arra, hogy a fehasználó kijelentkezzen fiókjából.
 * Alternatív esetek (Alternate Flows): -
 * Kivételes esetek: -
 
+Barátok kezelése (Use-Case)
+-----------------
+A barátok hozzáadására, törlésére és egyéb műveletek végzésére szolgál.
+
+* Prekondíciók: Bejelentkezett Felhasználó
+* Postkondíciók: Hozzáadott vagy törölt barát.
+* Szokásos működés (Main Flow): Barátok hozzáadása, törlése, és kezelésének elérése.
+* Alternatív esetek (Alternate Flows): -
+* Kivételes esetek: Internet/szerver probléma.
+
+Ranked játékmód használata
+-----------
+A Casual-al ellentétben a Ranked játékmód egy pont rendszer alapján választja a Felhasználó számára legideálisabb ellenfelet.
+
+* Prekondíciók: Bejelentkezett Felhasználó, aki elérte a meghatározott szintet hogy részt vehessen Ranked játékokban.
+* Postkondíciók: Ranked Játék indul, nyerés esetén pont nyerés, vesztés esetén pont veszteség.
+* Szokásos működés (Main Flow): Amennyiben a Felhasználó elérte a meghatározott szintet ranked játékot indíthat más véletlenszerű ellenfelek ellen.
+* Alternatív esetek (Alternate Flows): Egy üzenet jelenik meg hogy érje el a meghatározott szintet.
+* Kivételes esetek: Internet/szerver probléma.
+
+Ranglistába kerülés
+-----------
+A Ranked mód által nyert pontokból rangokat lehet elérni, ezzel jelezve a jobbik játékos magasabb rangját.
+
+* Prekondíciók: Bejelentkezett felhasználó, aki már játszott legalább egy Ranked játékot.
+* Postkondíciók: A Ranglistán látható helyezés.
+* Szokásos működés (Main Flow): A Ranked játékmód után szerzett vagy vesztett pontok alapján nő, vagy csökken a játékos pontja és ezáltal a rangja is változhat.
+* Alternatív esetek (Alternate Flows): Döntetlen, vagy hamar megszakadt játék esetén a pont nem változik.
+* Kivételes esetek: Internet/szerver probléma.
+
+Játék barátokkal
+----------
+Ez lehetővé teszi hogy a Felhasználó barátlistán található elérhető játékosokkal (Felhasználókkal) létesítsen 2vAI,1v1,2v2 vagy 2v2 Játékot.
+
+* Prekondíciók: Bejelentkezett Felhasználó, legalább egy elérhető baráttal.
+* Postkondíciók: Játék indul Barát(ok)al.
+* Szokásos működés (Main Flow): A Felhasználónak lehetősége nyílik töb különféle játékot indítani barátokkal.
+* Alternatív esetek (Alternate Flows): A Felhasználónak egyik barátja sem elérhető, vagy egy sincs.
+* Kivételes esetek: Internet/szerver probléma.
+
+
+<p>&nbsp;</p>
+
+1 VS 1 (offline) Játék Use-Case diagram
+=======================================
 
 <img src="Images/1v1JatekUseCase.png" width="1000">
 
+Felhasználó 1 (Actor)
+----------------
+Az a Felhasználó aki a Játékot futtató eszközén az ellenfél Felhasználóval osztozkodik.
+
+Felhasználó 2 (Actor)
+---------------
+Az a Felhasználó, aki az ellenfél Felhasználó eszközén osztozkodva közvetlenül játszik.
+
+Tank irányítása (Use-Case)
+------------
+A tankok irányítása előre hátra jobbra és balra.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: A Tank elmozdult.
+* Szokásos működés (Main Flow): A hozzá megfelelő gomb lenyomásával modul a Tank valamelyik irányba.
+* Alternatív esetek (Alternate Flows): A falhoz érve nem tud tovább haladmi a Tank.
+* Kivételes esetek: Internet/szerver probléma.
+
+Lövés a Tankal (Use-Case)
+----------------
+A Tankokkal lehet lőni egy golyót amivel érintezéskor felrobbannak az érintett Tank.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: A golyó elhagyja a tankot.
+* Szokásos működés (Main Flow): Az erre kijelölt gomb megnyomása után a golyó elhagyja a tankot.
+* Alternatív esetek (Alternate Flows): Még nem lehet lőni hiszen csak meghatározott időközönként lehet lőni.
+* Kivételes esetek: Internet/szerver probléma.
+
+Kilépés a játékból (Use-Case)
+------------------
+A játék megszakítására és leállítására mindkét felhasználónak lehetősége van.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: Kezdőképernyőre lépés.
+* Szokásos működés (Main Flow): Az erre kijelölt felületen ennek az opciónak a választásával kiléphet az egyik felhasználó, mivel ez egy eszközön történik ezért mindkét Felhasználó a tálcát látja.
+* Alternatív esetek (Alternate Flows): -
+* Kivételes esetek: Internet/szerver probléma.
+<p>&nbsp;</p>
+
+1 VS AI Játék Use-Case diagram
+====================
 <img src="Images/1vAIJatekUseCase.png" width="1000">
+
+Felhasználó(Actor)
+---------
+Olyan személy, aki jogosult navigálni a játékon belül, valamint abba be és ki lépni.
+
+AI (Actor)
+-----
+AI - Artifical Inteligence, magyarul Mesterséges inteligencia. Az AI tankokat mesterséges inteligencia irányítja, a Felhasználónál kevesebb joga van.
+
+Tank irányítása (Use-Case)
+------------
+A tankok irányítása előre hátra jobbra és balra.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: A Tank elmozdult.
+* Szokásos működés (Main Flow): A hozzá megfelelő gomb lenyomásával modul a Tank valamelyik irányba.
+* Alternatív esetek (Alternate Flows): A falhoz érve nem tud tovább haladmi a Tank.
+* Kivételes esetek: Internet/szerver probléma.
+
+Lövés a Tankal (Use-Case)
+----------------
+A Tankokkal lehet lőni egy golyót amivel érintezéskor felrobbannak az érintett Tank.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: A golyó elhagyja a tankot.
+* Szokásos működés (Main Flow): Az erre kijelölt gomb megnyomása után a golyó elhagyja a tankot.
+* Alternatív esetek (Alternate Flows): Még nem lehet lőni hiszen csak meghatározott időközönként lehet lőni.
+* Kivételes esetek: Internet/szerver probléma.
+
+Kilépés a játékból (Use-Case)
+------------------
+A Felhasználónak joga van akármikor leállítani a játékot, erre segít a kilépés a játékból opció.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: Kezdőképernyőre lépés.
+* Szokásos működés (Main Flow): Az erre kijelölt felületen ennek az opciónak a választásával kiléphet a felhasználó.
+* Alternatív esetek (Alternate Flows): -
+* Kivételes esetek: Internet/szerver probléma.
+
+<p>&nbsp;</p>
+
+2 VS 2 Játék Use-Case diagram
 
 <img src="Images/2v2JatekUseCase.png" width="1000">
 
+<p>&nbsp;</p>
+
+2 VS AI (offline) Játék Use-Case diagram
+======================
+
 <img src="Images/2vAIJatekUseCase.png" width="1000">
+
+Felhasználó 1 (Actor)
+----------------
+Az a Felhasználó aki a Játékot futtató eszközén az ellenfél Felhasználóval osztozkodik.
+
+Felhasználó 2 (Actor)
+---------------
+Az a Felhasználó, aki az ellenfél Felhasználó eszközén osztozkodva közvetlenül játszik.
+
+AI (Actor)
+-----
+AI - Artifical Inteligence, magyarul Mesterséges inteligencia. Az AI tankokat mesterséges inteligencia irányítja, a Felhasználónál kevesebb joga van. Ebben az esetben több ellen 
+
+Tank irányítása (Use-Case)
+------------
+A tankok irányítása előre hátra jobbra és balra.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: A Tank elmozdult.
+* Szokásos működés (Main Flow): A hozzá megfelelő gomb lenyomásával modul a Tank valamelyik irányba.
+* Alternatív esetek (Alternate Flows): A falhoz érve nem tud tovább haladmi a Tank.
+* Kivételes esetek: Internet/szerver probléma.
+
+Lövés a Tankal (Use-Case)
+----------------
+A Tankokkal lehet lőni egy golyót amivel érintezéskor felrobbannak az érintett Tank.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: A golyó elhagyja a tankot.
+* Szokásos működés (Main Flow): Az erre kijelölt gomb megnyomása után a golyó elhagyja a tankot.
+* Alternatív esetek (Alternate Flows): Még nem lehet lőni hiszen csak meghatározott időközönként lehet lőni.
+* Kivételes esetek: Internet/szerver probléma.
+
+Kilépés a játékból (Use-Case)
+------------------
+A Felhasználónak joga van akármikor leállítani a játékot, erre segít a kilépés a játékból opció.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: Kezdőképernyőre lépés.
+* Szokásos működés (Main Flow): Az erre kijelölt felületen ennek az opciónak a választásával kiléphet a felhasználó.
+* Alternatív esetek (Alternate Flows): -
+* Kivételes esetek: Internet/szerver probléma.
 
 * Prekondíciók: -
 * Postkondíciók: -
