--- a/H4.md
+++ b/H4.md
@@ -43,7 +43,7 @@ A következőkben tárgyaljuk a létrehozni kívánt alrendszer komponensek kapc
 2, Osztálydiagram
 =========
 
-(ide kellene az amit megcsinaltam)
+<img src="analizisModell.png" width="1000">
 
 <p>&nbsp;</p>
 
