+2 usecase hozzáadása magyarázattal.

--- a/H3.md
+++ b/H3.md
@@ -324,11 +324,11 @@ A Felhasználónak joga van akármikor leállítani a játékot, erre segít a k
 
 Felhasználó 1 (Actor)
 ----------------
-Az a Felhasználó aki a Játékot futtató eszközén az ellenfél Felhasználóval osztozkodik.
+Az a Felhasználó aki a Játékot futtató eszközén a csapattárs Felhasználóval osztozkodik.
 
 Felhasználó 2 (Actor)
 ---------------
-Az a Felhasználó, aki az ellenfél Felhasználó eszközén osztozkodva közvetlenül játszik.
+Az a Felhasználó, aki az csapattárs Felhasználó eszközén osztozkodva közvetlenül játszik.
 
 AI (Actor)
 -----
@@ -363,6 +363,101 @@ A Felhasználónak joga van akármikor leállítani a játékot, erre segít a k
 * Szokásos működés (Main Flow): Az erre kijelölt felületen ennek az opciónak a választásával kiléphet a felhasználó.
 * Alternatív esetek (Alternate Flows): -
 * Kivételes esetek: Internet/szerver probléma.
+
+
+2 VS AI (online) Játék Use-Case diagram
+======================
+<img src="Images/2vAIOnlineJatekUseCase.png" width="1000">
+
+
+Felhasználó 1 (Actor)
+----------------
+Az a Felhasználó aki egy 2vAI online Játékot indított hamarabb mint a másik Felhasználó, így ez a Felhaszáló lett a fő felhazsnál és a host.
+
+Felhasználó 2 (Actor)
+---------------
+Az a Felhasználó, aki 2VAI online Játékot indított az első Felhasználó után, így ő csatlakozott a másik Felhasználó által Host-tolt szerverre.
+
+AI (Actor)
+-----
+AI - Artifical Inteligence, magyarul Mesterséges inteligencia. Az AI tankokat mesterséges inteligencia irányítja, a Felhasználónál kevesebb joga van. Ebben az esetben több ellen 
+
+Tank irányítása (Use-Case)
+------------
+A tankok irányítása előre hátra jobbra és balra.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: A Tank elmozdult.
+* Szokásos működés (Main Flow): A hozzá megfelelő gomb lenyomásával modul a Tank valamelyik irányba.
+* Alternatív esetek (Alternate Flows): A falhoz érve nem tud tovább haladmi a Tank.
+* Kivételes esetek: Internet/szerver probléma.
+
+Lövés a Tankal (Use-Case)
+----------------
+A Tankokkal lehet lőni egy golyót amivel érintezéskor felrobbannak az érintett Tank.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: A golyó elhagyja a tankot.
+* Szokásos működés (Main Flow): Az erre kijelölt gomb megnyomása után a golyó elhagyja a tankot.
+* Alternatív esetek (Alternate Flows): Még nem lehet lőni hiszen csak meghatározott időközönként lehet lőni.
+* Kivételes esetek: Internet/szerver probléma.
+
+Kilépés a játékból (Use-Case)
+------------------
+A Felhasználónak joga van akármikor kilépni a játékból, azonban a Játék nem áll le, ha a Host lép le Host Migration jön létre.
+
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: Kezdőképernyőre lépés.
+* Szokásos működés (Main Flow): Az erre kijelölt felületen ennek az opciónak a választásával kiléphet a felhasználó.
+* Alternatív esetek (Alternate Flows): -
+* Kivételes esetek: Internet/szerver probléma.
+
+<p>&nbsp;</p>
+
+1 VS 1 (online) Játék Use-Case diagram
+=======================================
+
+<img src="Images/1v1OnlineJatekUseCase.png" width="1000">
+
+Felhasználó 1 (Actor)
+----------------
+Az a Felhasználó aki az 1v1 Online Játékot hamarabb indította mint a másik Felhasználó, ezáltal ő lett a host.
+
+Felhasználó 2 (Actor)
+---------------
+Az a Felhasználó, aki az 1v1 Online Játékot később indított mint a másik Felhasználó, ezáltal csatlakozott a másik Felhasználó.
+
+Tank irányítása (Use-Case)
+------------
+A tankok irányítása előre hátra jobbra és balra.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: A Tank elmozdult.
+* Szokásos működés (Main Flow): A hozzá megfelelő gomb lenyomásával modul a Tank valamelyik irányba.
+* Alternatív esetek (Alternate Flows): A falhoz érve nem tud tovább haladmi a Tank.
+* Kivételes esetek: Internet/szerver probléma.
+
+Lövés a Tankal (Use-Case)
+----------------
+A Tankokkal lehet lőni egy golyót amivel érintezéskor felrobbannak az érintett Tank.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: A golyó elhagyja a tankot.
+* Szokásos működés (Main Flow): Az erre kijelölt gomb megnyomása után a golyó elhagyja a tankot.
+* Alternatív esetek (Alternate Flows): Még nem lehet lőni hiszen csak meghatározott időközönként lehet lőni.
+* Kivételes esetek: Internet/szerver probléma.
+
+Kilépés a játékból (Use-Case)
+------------------
+A játék megszakítására és leállítására mindkét felhasználónak lehetősége van. A kilépő Felhasználó által a másik Felhasználó nyeri a játékot.
+
+* Prekondíciók: Játékba betöltés.
+* Postkondíciók: Kezdőképernyőre lépés. Az aki ne lépett ki nyer.
+* Szokásos működés (Main Flow): Az erre kijelölt felületen ennek az opciónak a választásával kiléphet mindkét Felhasználó.
+* Alternatív esetek (Alternate Flows): -
+* Kivételes esetek: Internet/szerver probléma.
+<p>&nbsp;</p>
 
 * Prekondíciók: -
 * Postkondíciók: -
