--- a/H3.md
+++ b/H3.md
@@ -605,11 +605,16 @@ A játék megszakítására minden felhasználónak lehetsége van, azonban ezze
 
 
 
-* Prekondíciók: -
-* Postkondíciók: -
-* Szokásos működés (Main Flow): -
-* Alternatív esetek (Alternate Flows): -
-* Kivételes esetek: Internet/szerver probléma.
+Szótár
+======
+* FFA - FREE FOR ALL, Magyarul mindenki mindenki ellen.
+* AI - ARTIFICIAL INTELIGENCE, Magyarul Mesterséges Inteligencia, egy olyan gép ami képes alkalmazkodni a környezetéhez.
+* V / VS - VERSUS, Magyarul egymás ellen.
+* TANK - Lánctalpas jármű fegyverzettel.
+* HOST - A szerver futtatója.
+* RANG - Pontok alapján megszabott rendszer, egyértelmű mutatása annak, hogy a Felhasználó mennyire jó játékos.
+* CASUAL - Olyan játékmód, aminek a végén nem változik a RANG.
+* RANKED - Olyan játékmód, aminek a végén lehet jobb vagy rosszabb rangot szerezni.
 
 
 
